Creato con Colaboratory

--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -415,7 +415,7 @@
         "        elif self.phase == \"eval\":\n",
         "            return outT\n",
         "\n",
-        "def decoder_warping(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder_warping/new_dataset_v2/epoch_16_steps_0.pth\", fc3_only=False, **kwargs):\n",
+        "def decoder_warping(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder_warping/new_dataset_v4/epoch_94_steps_0.pth\", fc3_only=False, **kwargs):\n",
         "    \"\"\"\n",
         "    load imported model instance\n",
         "    Args:\n",
@@ -473,55 +473,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OZ3RAcRIDc4g",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def get_map_person2paths(path, format='wav'):\n",
-        "  actor2data = dict()\n",
-        "  \n",
-        "  for person in listdir(path):\n",
-        "    n_path = join(path, person)\n",
-        "    files = glob.glob(n_path + '/**/*.'+format, recursive=True)\n",
-        "    actor2data[person] = files\n",
-        "  \n",
-        "  return actor2data\n",
-        "\n",
-        "def load_metadata(path):\n",
-        "  meta = pd.read_csv(path,sep='\\t')\n",
-        "\n",
-        "  meta = meta.drop('Gender',axis=1)\n",
-        "  meta = meta.drop('Nationality',axis=1)\n",
-        "  meta = meta.drop('Set',axis=1)\n",
-        "  return meta\n",
-        "\n",
-        "def couple_data(voice_map, face_map, meta):\n",
-        "  count = 0\n",
-        "  out = []\n",
-        "  for index, row in meta.iterrows():\n",
-        "    if (row['VoxCeleb1 ID'] not in voice_map.keys()) or (row['VGGFace1 ID'] not in face_map.keys()):\n",
-        "      count += 1\n",
-        "      continue\n",
-        "    # max(len(voice_map[row['VoxCeleb1 ID']]), face_map[row['VGGFace1 ID']])\n",
-        "    coupled = list(zip(voice_map[row['VoxCeleb1 ID']], face_map[row['VGGFace1 ID']]))\n",
-        "    out += coupled\n",
-        "  \n",
-        "  print(\"elements not found:\", count)\n",
-        "  return out\n",
-        "\n",
-        "def create_coupled_list(path_voices, path_faces, metaP):\n",
-        "  voice_map = get_map_person2paths(path_voices)\n",
-        "  face_map = get_map_person2paths(path_faces, 'jpg')\n",
-        "  meta = load_metadata(metaP)\n",
-        "  return couple_data(voice_map, face_map, meta)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "xoNPrJNGDfY7",
         "colab_type": "code",
         "colab": {}
@@ -566,7 +517,7 @@
         "      count += 1\n",
         "      continue\n",
         "    # max(len(voice_map[row['VoxCeleb1 ID']]), face_map[row['VGGFace1 ID']])\n",
-        "    coupled = list(zip(voice_map[row['VoxCeleb1 ID']], face_map[row['VGGFace1 ID']]))\n",
+        "    coupled = list(itertools.product(voice_map[row['VoxCeleb1 ID']], face_map[row['VGGFace1 ID']]))\n",
         "    out += coupled\n",
         "  \n",
         "  print(\"elements not found:\", count)\n",
@@ -646,6 +597,19 @@
         "\n",
         "\n",
         "data = Speech2FaceDataset('wav', 'Face_Feature','vox1_meta.csv')\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PgMzo1Qov37x",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#data[1]"
       ],
       "execution_count": null,
       "outputs": []
@@ -763,7 +727,7 @@
         "#optimizer_decay = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
         "#optimizer = optimizer_decay\n",
         "\n",
-        "datal = DataLoader(data, 3, True, num_workers=4)\n",
+        "datal = DataLoader(data, 8, True, num_workers=16)\n",
         "# W&B\n",
         "#wandb.watch(model)\n"
       ],
