Creato con Colaboratory

--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -81,14 +81,14 @@
         "\n",
         "\n",
         "\n",
-        "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/vox.zip\" /content\n",
+        "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/wav_filtered_20_per_actor.zip\" .\n",
         "#! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
-        "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox1_meta.csv\" /content\n",
-        "! cp \"/content/drive/My Drive/Speech2Face/face_features_10_per_actor.zip\" /content\n",
+        "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox1_meta.csv\" .\n",
+        "! cp \"/content/drive/My Drive/Speech2Face/face_features_10_per_actor.zip\" .\n",
         "\n",
         "# ! tar zxvf zippedFaces.tar.gz\n",
         "! unzip face_features_10_per_actor.zip\n",
-        "! unzip vox.zip\n",
+        "! unzip wav_filtered_20_per_actor.zip\n",
         "\n"
       ],
       "execution_count": null,
@@ -517,7 +517,7 @@
         "      count += 1\n",
         "      continue\n",
         "    # max(len(voice_map[row['VoxCeleb1 ID']]), face_map[row['VGGFace1 ID']])\n",
-        "    coupled = list(itertools.product(voice_map[row['VoxCeleb1 ID']], face_map[row['VGGFace1 ID']]))\n",
+        "    coupled = list(zip(voice_map[row['VoxCeleb1 ID']], face_map[row['VGGFace1 ID']]))\n",
         "    out += coupled\n",
         "  \n",
         "  print(\"elements not found:\", count)\n",
@@ -596,7 +596,7 @@
         "color_std = [tmp / 255.0 for tmp in color_std]\n",
         "\n",
         "\n",
-        "data = Speech2FaceDataset('wav', 'Face_Feature','vox1_meta.csv')\n"
+        "data = Speech2FaceDataset('wav_filtered_20_per_actor', 'Face_Feature','vox1_meta.csv')\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -727,7 +727,7 @@
         "#optimizer_decay = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
         "#optimizer = optimizer_decay\n",
         "\n",
-        "datal = DataLoader(data, 8, True, num_workers=16)\n",
+        "datal = DataLoader(data, 6, True, num_workers=16)\n",
         "# W&B\n",
         "#wandb.watch(model)\n"
       ],
