Add test code (the code is not tested)

--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -85,10 +85,12 @@
         "#! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
         "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox1_meta.csv\" .\n",
         "! cp \"/content/drive/My Drive/Speech2Face/face_features_10_per_actor.zip\" .\n",
+        "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/vox.zip\" .\n",
         "\n",
         "# ! tar zxvf zippedFaces.tar.gz\n",
         "! unzip face_features_10_per_actor.zip\n",
         "! unzip wav_filtered_20_per_actor.zip\n",
+        "! unzip vox.zip\n",
         "\n"
       ],
       "execution_count": null,
@@ -596,7 +598,9 @@
         "color_std = [tmp / 255.0 for tmp in color_std]\n",
         "\n",
         "\n",
-        "data = Speech2FaceDataset('wav_filtered_20_per_actor', 'Face_Feature','vox1_meta.csv')\n"
+        "data = Speech2FaceDataset('wav_filtered_20_per_actor', 'Face_Feature','vox1_meta.csv')\n",
+        "data_test = Speech2FaceDataset('wav', 'Face_Feature','vox1_meta.csv')\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -728,6 +732,7 @@
         "#optimizer = optimizer_decay\n",
         "\n",
         "datal = DataLoader(data, 6, True, num_workers=16)\n",
+        "datal_test = DataLoader(data_test, 6, False, num_workers=16)\n",
         "# W&B\n",
         "#wandb.watch(model)\n"
       ],
@@ -776,6 +781,7 @@
         "def fit(\n",
         "    epochs: int,\n",
         "    train_dl: torch.utils.data.DataLoader,\n",
+        "    test_dl: torch.utils.data.DataLoader,\n",
         "    model: torch.nn.Module,\n",
         "    VGG: torch.nn.Module,\n",
         "    decoder: torch.nn.Module,\n",
@@ -857,31 +863,41 @@
         "            )\n",
         "            tqdm_iterator.refresh()\n",
         "\n",
-        "        # TEST\n",
-        "        # model.eval()\n",
-        "        # test_loss_averager = make_averager()  # mantain a running average of the loss\n",
-        "        # correct = 0\n",
-        "        # for data, target in test_dl:\n",
-        "        #     # send to device\n",
-        "        #     data, target = data.to(device), target.to(device)\n",
+        "         # TEST\n",
+        "         model.eval()\n",
+        "         test_loss_averager = make_averager()  # mantain a running average of the loss\n",
+        "         correct = 0\n",
+        "         for (x, y) in test_dl:\n",
+        "             # send to device\n",
+        "             embedding, wav = x\n",
+        "             features_fc8, img = y\n",
+        "             # send to device\n",
+        "             wav = wav.to(device)\n",
+        "             embedding = embedding.to(device)\n",
+        "             features_fc8 = features_fc8.to(device)\n",
+        "             # print(wav.shape)\n",
+        " \n",
+        "             # embedding = VGG(img_normal)# .to(device)\n",
+        " \n",
+        "             output = model(wav)\n",
+        " \n",
+        "             # print(output.shape)\n",
+        " \n",
+        "             fvgg_s = VGG(output)\n",
+        "             fvgg_f = features_fc8\n",
+        " \n",
+        "             fdec_s = decoder(output)\n",
+        "             fdec_f = decoder(embedding)\n",
+        "             \n",
         "\n",
-        "        #     if perm is not None:\n",
-        "        #         data = permute_pixels(data, perm)\n",
-        "\n",
-        "        #     output = model(data)\n",
-        "\n",
-        "        #     test_loss_averager(F.cross_entropy(output, target))\n",
-        "\n",
-        "        #     # get the index of the max probability\n",
-        "        #     pred = output.max(1, keepdim=True)[1]\n",
-        "        #     correct += pred.eq(target.view_as(pred)).cpu().sum().item()\n",
-        "\n",
-        "        # accuracy = 100.0 * correct / len(test_dl.dataset)\n",
+        "             # loss = F.l1_loss(output, embedding)\n",
+        "             loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "             test_loss_averager(loss)\n",
         "\n",
         "        print(\n",
         "            f\"Epoch: {epoch}\\n\"\n",
         "            f\"Train set: Average loss: {train_loss_averager(None):.4f}\\n\"\n",
-        "            # f\"Test set: Average loss: {test_loss_averager(None):.4f}, \"\n",
+        "            f\"Test set: Average loss: {test_loss_averager(None):.4f}, \"\n",
         "            #f\"Accuracy: {correct}/{len(test_dl.dataset)} ({accuracy:.0f}%)\\n\"\n",
         "        )\n",
         "        _save_model(epoch, model, optimizer)\n",
@@ -939,7 +955,7 @@
         "if check_path is not None:\n",
         "  global_ep = _load_checkpoint(check_path)  \n",
         "\n",
-        "fit(10, datal, model, vgg_fc8, decoder, optimizer, \"Speech2Face Training\", restart_epoch=global_ep)"
+        "fit(10, datal, datal_test, model, vgg_fc8, decoder, optimizer, \"Speech2Face Training\", restart_epoch=global_ep)"
       ],
       "execution_count": null,
       "outputs": []
