Creato con Colaboratory

--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -47,7 +47,7 @@
         "colab": {}
       },
       "source": [
-        "! pip3 install face_recognition\n",
+        "# ! pip3 install face_recognition\n",
         "#! pip install --upgrade wandb\n",
         "#! wandb login f9cd4b35bf9733e5ead9d2b06e13ef2259b1284e"
       ],
@@ -864,35 +864,34 @@
         "            tqdm_iterator.refresh()\n",
         "\n",
         "         # TEST\n",
-        "         model.eval()\n",
-        "         test_loss_averager = make_averager()  # mantain a running average of the loss\n",
-        "         correct = 0\n",
-        "         for (x, y) in test_dl:\n",
-        "             # send to device\n",
-        "             embedding, wav = x\n",
-        "             features_fc8, img = y\n",
-        "             # send to device\n",
-        "             wav = wav.to(device)\n",
-        "             embedding = embedding.to(device)\n",
-        "             features_fc8 = features_fc8.to(device)\n",
-        "             # print(wav.shape)\n",
-        " \n",
-        "             # embedding = VGG(img_normal)# .to(device)\n",
-        " \n",
-        "             output = model(wav)\n",
-        " \n",
-        "             # print(output.shape)\n",
-        " \n",
-        "             fvgg_s = VGG(output)\n",
-        "             fvgg_f = features_fc8\n",
-        " \n",
-        "             fdec_s = decoder(output)\n",
-        "             fdec_f = decoder(embedding)\n",
-        "             \n",
+        "        model.eval()\n",
+        "        test_loss_averager = make_averager()  # mantain a running average of the loss\n",
+        "        correct = 0\n",
+        "        for (x, y) in test_dl:\n",
+        "            # send to device\n",
+        "            embedding, wav = x\n",
+        "            features_fc8, img = y\n",
+        "            # send to device\n",
+        "            wav = wav.to(device)\n",
+        "            embedding = embedding.to(device)\n",
+        "            features_fc8 = features_fc8.to(device)\n",
+        "            # print(wav.shape)\n",
         "\n",
-        "             # loss = F.l1_loss(output, embedding)\n",
-        "             loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
-        "             test_loss_averager(loss)\n",
+        "            # embedding = VGG(img_normal)# .to(device)\n",
+        "\n",
+        "            output = model(wav)\n",
+        "\n",
+        "            # print(output.shape)\n",
+        "\n",
+        "            fvgg_s = VGG(output)\n",
+        "            fvgg_f = features_fc8\n",
+        "\n",
+        "            fdec_s = decoder(output)\n",
+        "            fdec_f = decoder(embedding)\n",
+        "            \n",
+        "            # loss = F.l1_loss(output, embedding)\n",
+        "            loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            test_loss_averager(loss)\n",
         "\n",
         "        print(\n",
         "            f\"Epoch: {epoch}\\n\"\n",
@@ -941,7 +940,7 @@
         "colab": {}
       },
       "source": [
-        "check_path = None #\"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_2.pth\"\n",
+        "check_path = \"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_5.pth\"\n",
         "\n",
         "def _load_checkpoint(checkpoint_path):\n",
         "  checkpoint = torch.load(checkpoint_path)\n",
@@ -954,7 +953,19 @@
         "global_ep = 0\n",
         "if check_path is not None:\n",
         "  global_ep = _load_checkpoint(check_path)  \n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qK_BJXi8xsX2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "fit(10, datal, datal_test, model, vgg_fc8, decoder, optimizer, \"Speech2Face Training\", restart_epoch=global_ep)"
       ],
       "execution_count": null,
@@ -971,7 +982,7 @@
         "from torchsummary import summary\n",
         "\n",
         "\n",
-        "model = SpeechEncoder()\n",
+        "# model = SpeechEncoder()\n",
         "input = torch.unsqueeze(torch.tensor(converted).reshape(2,257,601), 0)\n",
         "\n",
         "model(input.type(torch.float32)).shape\n",
@@ -990,9 +1001,9 @@
       "source": [
         "# Quick testing -- models creation\n",
         "\n",
-        "enc = speech_encoder()\n",
-        "dec = decoder()\n",
-        "dec_w = decoder_warping()"
+        "# enc = speech_encoder()\n",
+        "dec_w = decoder_warping()\n",
+        "enc = model"
       ],
       "execution_count": null,
       "outputs": []
@@ -1008,16 +1019,16 @@
         "# Quick testing -- actual test\n",
         "\n",
         "enc.eval()\n",
-        "dec.eval()\n",
-        "#dec_w.eval() # Is it needed??\n",
+        "# dec.eval()\n",
+        "dec_w.eval() \n",
         "\n",
         "test_wav_path = \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10279/3qAxPgeIvCQ/00001.wav\"\n",
         "test_wav = load_wav(test_wav_path)\n",
-        "test_wav = torch.tensor(test_wav).reshape(2,257,601).float().unsqueeze(0)\n",
+        "test_wav = torch.tensor(test_wav).reshape(2,257,601).float().unsqueeze(0).to(device)\n",
         "\n",
         "test_wav_path2 = \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10277/0rpfN7wThsg/00001.wav\"\n",
         "test_wav2 = load_wav(test_wav_path2)\n",
-        "test_wav2 = torch.tensor(test_wav2).reshape(2,257,601).float().unsqueeze(0)\n",
+        "test_wav2 = torch.tensor(test_wav2).reshape(2,257,601).float().unsqueeze(0).to(device)\n",
         "\n",
         "print(torch.equal(test_wav, test_wav2))\n",
         "\n",
@@ -1025,12 +1036,10 @@
         "\n",
         "\n",
         "out = enc(test_wav)\n",
-        "decoded = dec(out)\n",
         "decoded_w = dec_w(out)\n",
         "\n",
         "\n",
         "out2 = enc(test_wav2)\n",
-        "decoded2 = dec(out2)\n",
         "decoded_w2 = dec_w(out2)"
       ],
       "execution_count": null,
@@ -1053,12 +1062,12 @@
         "o_img_w2 = cv2.cvtColor(np.einsum('abc->bca',decoded_w2[0].detach().numpy()*255), cv2.COLOR_BGR2RGB)\n",
         "cv2_imshow(o_img_w2)\n",
         "\n",
-        "#2 - Decoder w/o warping\n",
-        "o_img = cv2.cvtColor(np.einsum('abc->bca',decoded[0].detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
-        "cv2_imshow(o_img)\n",
-        "\n",
-        "o_img2 = cv2.cvtColor(np.einsum('abc->bca',decoded2[0].detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
-        "cv2_imshow(o_img2)"
+        "# #2 - Decoder w/o warping\n",
+        "# o_img = cv2.cvtColor(np.einsum('abc->bca',decoded[0].detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
+        "# cv2_imshow(o_img)\n",
+        "# \n",
+        "# o_img2 = cv2.cvtColor(np.einsum('abc->bca',decoded2[0].detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
+        "# cv2_imshow(o_img2)"
       ],
       "execution_count": null,
       "outputs": []
