Creato con Colaboratory

--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -721,8 +721,8 @@
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
         "\n",
-        "decoder = decoder_warping(fc3_only=True)\n",
-        "decoder.to(device)\n",
+        "# decoder = decoder_warping(fc3_only=True)\n",
+        "# decoder.to(device)\n",
         "\n",
         "\n",
         "\n",
@@ -845,12 +845,13 @@
         "            fvgg_s = VGG(output)\n",
         "            fvgg_f = features_fc8\n",
         "\n",
-        "            fdec_s = decoder(output)\n",
-        "            fdec_f = decoder(embedding)\n",
+        "            # fdec_s = decoder(output)\n",
+        "            # fdec_f = decoder(embedding)\n",
         "            \n",
         "\n",
         "            # loss = F.l1_loss(output, embedding)\n",
-        "            loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            # loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
         "            loss.backward()\n",
         "            opt.step()\n",
         "            opt.zero_grad()\n",
@@ -886,11 +887,12 @@
         "            fvgg_s = VGG(output)\n",
         "            fvgg_f = features_fc8\n",
         "\n",
-        "            fdec_s = decoder(output)\n",
-        "            fdec_f = decoder(embedding)\n",
+        "            # fdec_s = decoder(output)\n",
+        "            # fdec_f = decoder(embedding)\n",
         "            \n",
         "            # loss = F.l1_loss(output, embedding)\n",
-        "            loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            # loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
         "            test_loss_averager(loss)\n",
         "\n",
         "        print(\n",
@@ -940,7 +942,7 @@
         "colab": {}
       },
       "source": [
-        "check_path = \"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_5.pth\"\n",
+        "check_path = None #\"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_5.pth\"\n",
         "\n",
         "def _load_checkpoint(checkpoint_path):\n",
         "  checkpoint = torch.load(checkpoint_path)\n",
