Creato con Colaboratory

--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -677,7 +677,7 @@
         "        out = self.pooling4(out)\n",
         "        out = self.batch_norm7(self.relu(self.conv7(out)))\n",
         "        out = self.batch_norm8(self.relu(self.conv8(out)))\n",
-        "        out = self.batch_norm9(self.relu(self.pooling5(self.conv9(out))))\n",
+        "        out = self.batch_norm9(self.relu(self.  (self.conv9(out))))\n",
         "\n",
         "        batch = out.shape[0]\n",
         "        out = out.view((batch, 512 * 1 * 144))\n",
@@ -869,31 +869,32 @@
         "        test_loss_averager = make_averager()  # mantain a running average of the loss\n",
         "        correct = 0\n",
         "        for (x, y) in test_dl:\n",
-        "            # send to device\n",
-        "            embedding, wav = x\n",
-        "            features_fc8, img = y\n",
-        "            # send to device\n",
-        "            wav = wav.to(device)\n",
-        "            embedding = embedding.to(device)\n",
-        "            features_fc8 = features_fc8.to(device)\n",
-        "            # print(wav.shape)\n",
-        "\n",
-        "            # embedding = VGG(img_normal)# .to(device)\n",
-        "\n",
-        "            output = model(wav)\n",
-        "\n",
-        "            # print(output.shape)\n",
-        "\n",
-        "            fvgg_s = VGG(output)\n",
-        "            fvgg_f = features_fc8\n",
-        "\n",
-        "            # fdec_s = decoder(output)\n",
-        "            # fdec_f = decoder(embedding)\n",
-        "            \n",
-        "            # loss = F.l1_loss(output, embedding)\n",
-        "            # loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
-        "            loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
-        "            test_loss_averager(loss)\n",
+        "            with torch.no_grad():\n",
+        "                # send to device\n",
+        "                embedding, wav = x\n",
+        "                features_fc8, img = y\n",
+        "                # send to device\n",
+        "                wav = wav.to(device)\n",
+        "                embedding = embedding.to(device)\n",
+        "                features_fc8 = features_fc8.to(device)\n",
+        "                # print(wav.shape)\n",
+        "    \n",
+        "                # embedding = VGG(img_normal)# .to(device)\n",
+        "    \n",
+        "                output = model(wav)\n",
+        "    \n",
+        "                # print(output.shape)\n",
+        "    \n",
+        "                fvgg_s = VGG(output)\n",
+        "                fvgg_f = features_fc8\n",
+        "    \n",
+        "                # fdec_s = decoder(output)\n",
+        "                # fdec_f = decoder(embedding)\n",
+        "                \n",
+        "                # loss = F.l1_loss(output, embedding)\n",
+        "                # loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "                loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "                test_loss_averager(loss)\n",
         "\n",
         "        print(\n",
         "            f\"Epoch: {epoch}\\n\"\n",
