--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -450,6 +450,14 @@
         "colab": {}
       },
       "source": [
+        "def power_law(signal):\n",
+        "  converted = signal\n",
+        "  sign = np.sign(converted)\n",
+        "  converted[:, :, 0] = np.abs(converted[:, :, 0])** 0.3\n",
+        "  converted[:, :, 1] = np.abs(converted[:, :, 1])** 0.3\n",
+        "  return sign * converted\n",
+        "  \n",
+        "\n",
         "def load_wav(wav_path):\n",
         "  def adjust(stft):\n",
         "    if stft.shape[1] == 601:\n",
@@ -467,7 +475,10 @@
         "  converted[i,j[:,np.newaxis], 0] = spectroComplex[i,j[:,np.newaxis]].real\n",
         "  converted[i,j[:,np.newaxis], 1] = spectroComplex[i,j[:,np.newaxis]].imag\n",
         "\n",
-        "  return converted"
+        "  return power_law(converted)\n",
+        "\n",
+        "\n",
+        "# load_wav('/content/wav/id10271/1gtz-CUIygI/00002.wav')"
       ],
       "execution_count": null,
       "outputs": []
@@ -588,7 +599,7 @@
         "        image_preprocessed = self.transform_fd(img)\n",
         "        \n",
         "        return (torch.tensor(self.features[idx_feature]).float(),\n",
-        "                torch.tensor(wav).reshape(2,257,601).float()), (torch.tensor(self.features_fc8[idx_feature]).float() , image_preprocessed)\n",
+        "                torch.tensor(wav).reshape(2,601,257).float()), (torch.tensor(self.features_fc8[idx_feature]).float() , image_preprocessed)\n",
         "\n",
         "\n",
         "\n",
@@ -643,10 +654,11 @@
         "        self.conv7 = nn.Conv2d(256, 512, kernel_size=4,stride=1) \n",
         "        self.conv8 = nn.Conv2d(512, 512, kernel_size=4,stride=2) \n",
         "\n",
-        "        self.conv9 = nn.Conv2d(512, 512, kernel_size=3,stride=2) # Queste due celle sono diverse\n",
-        "        self.pooling5 = nn.AvgPool2d(kernel_size=(1,1), stride=1)# Queste due celle sono diverse\n",
+        "        self.conv9 = nn.Conv2d(512, 512, kernel_size=4,stride=2) # Queste due celle sono diverse\n",
+        "        self.pooling5 = nn.AvgPool2d(kernel_size=(6,1), stride=1)# Queste due celle sono diverse\n",
         "\n",
-        "        self.fc1 = nn.Linear(512 * 1 * 144, 4096)\n",
+        "        \n",
+        "        self.fc1 = nn.Linear(512 * 1 * 57, 4096)\n",
         "        self.fc2 = nn.Linear(4096, 4096)\n",
         "\n",
         "        self.batch_norm1 = nn.BatchNorm2d(64)\n",
@@ -677,10 +689,11 @@
         "        out = self.pooling4(out)\n",
         "        out = self.batch_norm7(self.relu(self.conv7(out)))\n",
         "        out = self.batch_norm8(self.relu(self.conv8(out)))\n",
-        "        out = self.batch_norm9(self.relu(self.  (self.conv9(out))))\n",
+        "        out = self.conv9(out)\n",
+        "        out = self.batch_norm9(self.relu(self.pooling5(out)))\n",
         "\n",
         "        batch = out.shape[0]\n",
-        "        out = out.view((batch, 512 * 1 * 144))\n",
+        "        out = out.view((batch, 512 * 1 * 57))\n",
         "        out = self.relu(self.fc1(out))\n",
         "        out = self.fc2(out)\n",
         "\n",
