--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -142,10 +142,10 @@
       "source": [
         "# Reproducibility stuff\n",
         "\n",
-        "import random\n",
-        "torch.manual_seed(42)\n",
-        "np.random.seed(42)\n",
-        "random.seed(0)"
+        "# import random\n",
+        "# torch.manual_seed(42)\n",
+        "# np.random.seed(42)\n",
+        "# random.seed(0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -734,8 +734,8 @@
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
         "\n",
-        "# decoder = decoder_warping(fc3_only=True)\n",
-        "# decoder.to(device)\n",
+        "decoder = decoder_warping(fc3_only=True)\n",
+        "decoder.to(device)\n",
         "\n",
         "\n",
         "\n",
@@ -744,7 +744,7 @@
         "#optimizer_decay = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
         "#optimizer = optimizer_decay\n",
         "\n",
-        "datal = DataLoader(data, 6, True, num_workers=16)\n",
+        "datal = DataLoader(data, 8, True, num_workers=16)\n",
         "datal_test = DataLoader(data_test, 6, False, num_workers=16)\n",
         "# W&B\n",
         "#wandb.watch(model)\n"
@@ -858,13 +858,13 @@
         "            fvgg_s = VGG(output)\n",
         "            fvgg_f = features_fc8\n",
         "\n",
-        "            # fdec_s = decoder(output)\n",
-        "            # fdec_f = decoder(embedding)\n",
+        "            fdec_s = decoder(output)\n",
+        "            fdec_f = decoder(embedding)\n",
         "            \n",
         "\n",
         "            # loss = F.l1_loss(output, embedding)\n",
-        "            # loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
-        "            loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            # loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
         "            loss.backward()\n",
         "            opt.step()\n",
         "            opt.zero_grad()\n",
@@ -901,12 +901,12 @@
         "                fvgg_s = VGG(output)\n",
         "                fvgg_f = features_fc8\n",
         "    \n",
-        "                # fdec_s = decoder(output)\n",
-        "                # fdec_f = decoder(embedding)\n",
+        "                fdec_s = decoder(output)\n",
+        "                fdec_f = decoder(embedding)\n",
         "                \n",
         "                # loss = F.l1_loss(output, embedding)\n",
-        "                # loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
-        "                loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "                loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "                # loss =  F.l1_loss(embedding, output) + lambda1 * loss_2(embedding, output) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
         "                test_loss_averager(loss)\n",
         "\n",
         "        print(\n",
@@ -999,7 +999,7 @@
         "\n",
         "\n",
         "# model = SpeechEncoder()\n",
-        "input = torch.unsqueeze(torch.tensor(converted).reshape(2,257,601), 0)\n",
+        "input = torch.unsqueeze(torch.tensor(converted).reshape(2,601,257), 0)\n",
         "\n",
         "model(input.type(torch.float32)).shape\n",
         "summary(model, (2,257,601))"
