--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -48,7 +48,7 @@
       },
       "source": [
         "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
-        "! tar zxvf zippedFaces.tar.gz\n",
+        "! tar zxf zippedFaces.tar.gz\n",
         "! rm zippedFaces.tar.gz"
       ],
       "execution_count": null,
@@ -63,9 +63,7 @@
       },
       "source": [
         "#! pip install openface\n",
-        "! pip3 install face_recognition\n",
-        "\n",
-        "from face_recognition import face_landmarks, face_locations, face_encodings"
+        "! pip3 install face_recognition\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -135,7 +133,9 @@
         "import cv2\n",
         "import sys\n",
         "\n",
-        "import random"
+        "import random\n",
+        "\n",
+        "from face_recognition import face_landmarks, face_locations, face_encodings\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -537,80 +537,119 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "j5253XMKekwM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!rm -r filtered_unzippedFaces/"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zOHJZ24ke0Hy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#!cp /content/drive/My\\ Drive/Speech2Face/face_features_10_per_actor.zip .\n",
+        "\n",
+        "!rm -rf Face_Feature"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5EzCynEGez_0",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "9LoAxZjVRZyv",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "!rm -r filtered_unzippedFaces/\n",
+        "#!rm -r filtered_unzippedFaces/\n",
         "\n",
-        "PICS_PER_ACTOR = 10\n",
+        "PICS_PER_ACTOR = 40\n",
         "face_feature = np.zeros((len(data_points)*PICS_PER_ACTOR,4096)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
         "face_feature_fc8 = np.zeros((len(data_points)*PICS_PER_ACTOR,2622)) ### ARRAY THAT WILL STORE THE FACE FEATURE (fc8 layer)\n",
         "\n",
         "index = 0\n",
         "\n",
-        "new_dir = \"filtered_unzippedFaces\"\n",
-        "os.makedirs(new_dir)\n",
+        "face_dir = \"Face_Feature\"\n",
+        "faces_dir = \"Face_Feature/Faces\"\n",
+        "if not os.path.exists(face_dir):\n",
+        "  os.makedirs(faces_dir)\n",
+        "\n",
         "\n",
         "for i in tqdm(range(len(data_points))):\n",
         "  dir = data_points[i]\n",
         "\n",
         "  s = join(datasetPath, dir+\"/1.6/\")\n",
-        "  s_out = join(new_dir, dir)\n",
         "\n",
         "  videos = listdir(s)\n",
         "\n",
-        "  pics_per_video = PICS_PER_ACTOR / len(videos)\n",
+        "  #pics_per_video = PICS_PER_ACTOR / len(videos)\n",
         "\n",
         "  taken_per_actor = 0\n",
         "\n",
         "  for subdir in videos:\n",
         "    t = join(s, subdir)\n",
-        "    t_out = join(s_out, subdir)\n",
         "\n",
-        "    taken_per_video = 0\n",
+        "    #taken_per_video = 0\n",
+        "    if taken_per_actor >= PICS_PER_ACTOR:\n",
+        "      break\n",
         "\n",
         "    for image in listdir(t):\n",
-        "      if taken_per_actor >= PICS_PER_ACTOR or taken_per_video >= pics_per_video:\n",
+        "      if taken_per_actor >= PICS_PER_ACTOR: #or taken_per_video >= pics_per_video:\n",
         "        break\n",
         "\n",
+        "      with torch.no_grad():\n",
         "\n",
-        "      image_path = join(t, image)\n",
-        "      img = Image.open(image_path)\n",
-        "\n",
-        "\n",
-        "      pos = face_locations(np.array(img), model='cnn')\n",
-        "\n",
-        "      if len(pos) == 0:\n",
-        "       continue   \n",
-        "\n",
-        "      y, p, r = y_p_r(img)\n",
-        "\n",
-        "      if not (-10 < y < 10) or not (-15 <= p <= 15):\n",
-        "        continue\n",
-        "\n",
-        "      taken_per_actor += 1\n",
-        "      taken_per_video += 1\n",
-        "\n",
-        "      encoding = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device))\n",
-        "      encoding_fc8 = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device), is_fc8=True)\n",
-        "      # face_feature[index] = encoding.cpu().detach().numpy()\n",
-        "      face_feature[index,:] = encoding.cpu().detach().numpy()\n",
-        "      face_feature_fc8[index,:] = encoding_fc8.cpu().detach().numpy()\n",
-        "\n",
-        "      # print(face_feature[index].sum())\n",
-        "      filename = data_points[i] + \"_\"  + str(index) + \".jpg\"\n",
-        "\n",
-        "      if not os.path.exists(s_out):\n",
-        "        os.makedirs(s_out)      \n",
-        "      path_save = join(s_out, filename)\n",
-        "\n",
-        "      img.save(path_save)\n",
-        "      index += 1  \n",
-        "\n",
-        "np.save(\"filtered_unzippedFaces/facefeature.npy\",face_feature[:index])\n",
-        "np.save(\"filtered_unzippedFaces/facefeature_fc8.npy\",face_feature_fc8[:index])"
+        "        image_path = join(t, image)\n",
+        "        img = Image.open(image_path)\n",
+        "  \n",
+        "        pos = face_locations(np.array(img), model='cnn')\n",
+        "  \n",
+        "        if len(pos) == 0:\n",
+        "         continue   \n",
+        "  \n",
+        "        y, p, r = y_p_r(img)\n",
+        "  \n",
+        "        if not (-10 < y < 10) or not (-15 <= p <= 15):\n",
+        "          continue\n",
+        "  \n",
+        "        taken_per_actor += 1\n",
+        "        #taken_per_video += 1\n",
+        "  \n",
+        "        encoding = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device))\n",
+        "        encoding_fc8 = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device), is_fc8=True)\n",
+        "        # face_feature[index] = encoding.cpu().detach().numpy()\n",
+        "        face_feature[index,:] = encoding.cpu().detach().numpy()\n",
+        "        face_feature_fc8[index,:] = encoding_fc8.cpu().detach().numpy()\n",
+        "  \n",
+        "        # print(face_feature[index].sum())\n",
+        "        filename = dir + \"_\"  + str(index) + \".jpg\"\n",
+        "  \n",
+        "        out_file = join(faces_dir, filename)\n",
+        "  \n",
+        "        img.save(out_file)\n",
+        "        index += 1  \n",
+        "      \n",
+        "np.save(\"Face_Feature/facefeature.npy\",face_feature[:index])\n",
+        "np.save(\"Face_Feature/facefeature_fc8.npy\",face_feature_fc8[:index])"
       ],
       "execution_count": null,
       "outputs": []
@@ -654,8 +693,8 @@
         "# prova = np.load(\"Face_Feature/facefeature.npy\")\n",
         "# print(prova[3752].sum())\n",
         "\n",
-        "! zip -r face_features_hopenet_40.zip Face_Feature/ \n",
-        "! cp face_features_hopenet_40.zip /content/drive/My\\ Drive/Speech2Face/\n",
+        "! zip -r face_features_40_per_actor.zip filtered_unzippedFaces/ \n",
+        "! cp face_features_40_per_actor.zip /content/drive/My\\ Drive/Speech2Face/\n",
         "#! rm -r Face_Feature/"
       ],
       "execution_count": null,
