Creato con Colaboratory

--- a/Speech2Face_newDataset_combination.ipynb
+++ b/Speech2Face_newDataset_combination.ipynb
@@ -121,6 +121,8 @@
         "import torch.nn as nn\n",
         "from typing import Optional, Callable\n",
         "from tqdm.notebook import tqdm, trange\n",
+        "  \n",
+        "from functools import lru_cache\n",
         "\n",
         "from google.colab.patches import cv2_imshow\n",
         "import cv2\n",
@@ -456,8 +458,9 @@
         "  converted[:, :, 0] = np.abs(converted[:, :, 0])** 0.3\n",
         "  converted[:, :, 1] = np.abs(converted[:, :, 1])** 0.3\n",
         "  return sign * converted\n",
-        "  \n",
         "\n",
+        "\n",
+        "@lru_cache(maxsize=128)\n",
         "def load_wav(wav_path):\n",
         "  def adjust(stft):\n",
         "    if stft.shape[1] == 601:\n",
@@ -762,14 +765,14 @@
         "colab": {}
       },
       "source": [
-        "def _save_model(epoch, model, optimizer, output_dir_name=\"/content/drive/My Drive/Speech2Face/models/speech_encoder/\"):\n",
+        "def _save_model(epoch, model, optimizer, output_dir_name=\"/content/drive/My Drive/Speech2Face/models/speech_encoder/starting_from_9_epochs/\"):\n",
         "    torch.save({\n",
         "        'epoch': epoch,\n",
         "        'model_state_dict': model.state_dict(),\n",
         "        'optimizer_state_dict': optimizer.state_dict(),\n",
         "        }, join(output_dir_name, 'adam_epoch_{}.pth'.format(epoch)))\n",
         "    \n",
-        "def _save_model_intermediate(epochs, iterations, model, optimizer, output_dir_name=\"/content/drive/My Drive/Speech2Face/models/speech_encoder/\"):\n",
+        "def _save_model_intermediate(epoch, iterations, model, optimizer, output_dir_name=\"/content/drive/My Drive/Speech2Face/models/speech_encoder/starting_from_9_epochs/\"):\n",
         "    torch.save({\n",
         "        'epoch': epoch,\n",
         "        'model_state_dict': model.state_dict(),\n",
@@ -887,7 +890,7 @@
         "            tqdm_iterator.refresh()\n",
         "\n",
         "            if (batch_idx % 1100) == 0:\n",
-        "              _save_model(epoch, batch_idx, model, optimizer)\n",
+        "              _save_model_intermediate(epoch, batch_idx, model, optimizer)\n",
         "\n",
         "\n",
         "         # TEST\n",
@@ -969,7 +972,7 @@
         "colab": {}
       },
       "source": [
-        "check_path = None #\"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_5.pth\"\n",
+        "check_path = \"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_8.pth\"\n",
         "\n",
         "def _load_checkpoint(checkpoint_path):\n",
         "  checkpoint = torch.load(checkpoint_path)\n",
