--- a/Speech2Face_newDataset_tests.ipynb
+++ b/Speech2Face_newDataset_tests.ipynb
@@ -970,7 +970,7 @@
         "colab": {}
       },
       "source": [
-        "check_path = '/content/drive/My Drive/Speech2Face/models/speech_encoder/L1/adam_epoch_4.pth'\n",
+        "check_path = '/content/drive/My Drive/Speech2Face/models/speech_encoder/adam_epoch_8.pth'\n",
         "\n",
         "def _load_checkpoint(checkpoint_path):\n",
         "  checkpoint = torch.load(checkpoint_path)\n",
@@ -1146,6 +1146,32 @@
         "\n",
         "o_img_w2 = cv2.cvtColor(np.einsum('abc->bca',decoded_w2[0].cpu().detach().numpy()*255), cv2.COLOR_BGR2RGB)\n",
         "cv2_imshow(o_img_w2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vgQuuT808MYM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cv2.imwrite('first_output.png', o_img_w2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OmOFl71m8XIx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!cp first_output.png /content/drive/My\\ Drive/Speech2Face"
       ],
       "execution_count": null,
       "outputs": []
