--- a/Speech2Face_newDataset_augmented_dataset.ipynb
+++ b/Speech2Face_newDataset_augmented_dataset.ipynb
@@ -593,7 +593,7 @@
         "    \n",
         "  def __getitem__(self, idx):\n",
         "        wav_p, img_p = self.coupled_list[idx]\n",
-        "        print(wav_p, img_p)\n",
+        "        #print(wav_p, img_p)\n",
         "        wav = load_wav(wav_p)\n",
         "        img = Image.open(img_p)\n",
         "        idx_feature = int(img_p.split('_')[-1].split('.')[0])\n",
