--- a/Speech2Face_newDataset_augmented_dataset.ipynb
+++ b/Speech2Face_newDataset_augmented_dataset.ipynb
@@ -974,7 +974,7 @@
         "colab": {}
       },
       "source": [
-        "check_path = \"/content/drive/My Drive/Speech2Face/models/speech_encoder/aug_ds/adam_epoch_0.pth\"\n",
+        "check_path = \"/content/drive/My Drive/Speech2Face/models/speech_encoder/aug_ds/adam_epoch_2_5500.pth\"\n",
         "\n",
         "def _load_checkpoint(checkpoint_path):\n",
         "  checkpoint = torch.load(checkpoint_path)\n",
@@ -1130,7 +1130,7 @@
       },
       "source": [
         "cv2.imwrite('ds_augmented_epoch0_TRAIN_id10252-39.png', o_img_w)\n",
-        "!cp ds_augmented_epoch0_TRAIN_id10252-39.png /content/drive/My\\ Drive/Speech2Face"
+        "#!cp ds_augmented_epoch0_TRAIN_id10252-39.png /content/drive/My\\ Drive/Speech2Face"
       ],
       "execution_count": null,
       "outputs": []
